--- a/src/styles/script.css
+++ b/src/styles/script.css
@@ -6,6 +6,22 @@
   font-family: "Poppins", system-ui, sans-serif;
 }
 
+body {
+  min-height: 100vh;
+  background-color: #e3e9f7;
+  display: flex;
+}
+
+main {
+  padding: 20px;
+}
+
+#sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 #user_avatar {
   width: 50px;
   height: 50px;
