adicionado umas quebras de linhas com a tag br para os textos se adaptarem e também melhorias no documento css como height 100vh , background FFFFFF para distinguir as cores

--- a/src/styles/script.css
+++ b/src/styles/script.css
@@ -20,6 +20,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #FFFFFF;
 }
 
 #user_avatar {
