--- a/src/styles/script.css
+++ b/src/styles/script.css
@@ -23,6 +23,7 @@ main {
   background-color: #ffffff;
   height: 100vh;
   border-radius: 0px 18px 18px 0px;
+  position: relative;
 }
 
 #sidebar_content {
@@ -54,15 +55,73 @@ main {
 }
 
 #side_items {
-    
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style: none;
-
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style: none;
 }
 .side_item {
   padding: 1rem;
   cursor: pointer;
   border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.side_item.active {
+  background-color: #4f46e5;
+}
+
+.side_item:hover:not(.active),
+#logout_btn:hover {
+  background-color: #e3e9f7;
+}
+.side_item a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: #0a0a0a;
+  font-weight: bold;
+}
+
+.side_item.active a {
+  color: #e3e9f7;
+}
+.side_item a i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+}
+
+#logout {
+  border-top: 1px solid #e3e9f7;
+  padding: 0.6rem;
+}
+
+#logout_btn {
+  border: 1px solid red;
+  border: none;
+  padding: 0.7rem;
+  font-size: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  border-radius: 8px;
+  text-align: start;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+#open_btn {
+  position: absolute ;
+  top: 30px;
+  right: -19px;
+  width: 20px;
+  height: 30px;
 }
